--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,6 @@
 {
     "files.associations": {
-        "vector": "cpp",
         "*.tcc": "cpp",
-        "array": "cpp",
-        "deque": "cpp",
-        "string": "cpp",
-        "unordered_map": "cpp",
-        "string_view": "cpp",
-        "initializer_list": "cpp",
-        "sstream": "cpp",
-        "tuple": "cpp",
-        "istream": "cpp",
-        "functional": "cpp",
-        "random": "cpp",
-        "memory_resource": "cpp",
-        "regex": "cpp"
+        "fstream": "cpp"
     }
 }
