--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "fstream": "cpp",
         "unistd.h": "c",
         "stat.h": "c",
-        "cctype": "c"
+        "cctype": "c",
+        "inet.h": "c"
     }
 }
